[package]
name = "cyclique"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: reverse the dynamic feature before releasing.
bevy = { version = "0.8.1", features = ["dynamic"] }

# TODO: dev dependency.
bevy-inspector-egui = "0.12.1"

# Bevy optimisation stuff.

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
